
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int jv ;


 int JV_FALSE ;
 int JV_TRUE ;

jv jv_bool(int x) {
  return x ? JV_TRUE : JV_FALSE;
}
